--- a/plugin.project.json
+++ b/plugin.project.json
@@ -6,6 +6,7 @@
 			"$className": "ServerStorage",
 			"$ignoreUnknownInstances": true,
 			"BuildingPlugin" : {
+				"$ignoreUnknownInstances": true,
 				"$path": "plugin"
 			}
 		}
